tests/should_fail/question_mark_on_string.nv
module main

// SHOULD FAIL: ? on a String (not an Option)
let s = "hello"
let c = s?
